# DifferentiableOptimizationCBF

./: .readthedocs.yaml  CITATION.bib  Justfile  LICENSE  MANIFEST.in  README.md  juliapkg.json  mise.toml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
DifferentiableOptimizationCBF/: base_controller.py  cbfqp_solver.py  exp_utils.py  three_blocks_controller.py  three_blocks_exp.py  two_walls_controller.py  two_walls_exp.py  unicycle_exp.py  unicycle_exp_sysimage.py  unicycle_plot_utils.py
DifferentiableOptimizationCBF/dc_utils/: create_arm_capsule.jl  create_arm_ellipsoid.jl  get_cbf_link_polygon_obstacle.jl  get_cbf_three_blocks.jl  get_cbf_two_walls.jl  get_cbf_unicycle_env.jl  three_blocks_exp_setup.jl  two_wall_exp_setup.jl  unicycle_env_setup.jl  unicycle_precompile.jl  unicycle_sysimage.jl  update_arm.jl
DifferentiableOptimizationCBF/envs/: fr3_base_env.py  three_blocks_env.py  two_walls_env.py  unicycle_env.py
DifferentiableOptimizationCBF/robots/: fr3_hand_collision.urdf  fr3_link4_ellipsoid.urdf  fr3_link5_1_capsule.urdf  fr3_link5_1_ellipsoid.urdf  fr3_link5_2_ellipsoid.urdf  fr3_link6_capsule.urdf  fr3_link6_ellipsoid.urdf  fr3_link7_ellipsoid.urdf  square_obstacle.urdf  wall_back_upper.urdf  wall_front_upper.urdf
docker/: Dockerfile
docker/config/: docker.zshrc
docker/scripts/: install-julia-pkgs.sh  install-python-pkgs.sh  install-tools.sh
docs/source/: conf.py  index.md  install.md
docs/source/tutorials/: controller.md  index.md  julia.md
provisioning/: setup.sh
src/DifferentiableOptimizationCBF/: base_controller.py  cbfqp_solver.py  exp_utils.py  three_blocks_controller.py  three_blocks_exp.py  two_walls_controller.py  two_walls_exp.py  unicycle_exp.py  unicycle_exp_sysimage.py
src/DifferentiableOptimizationCBF/dc_utils/: __init__.py  get_cbf_link_polygon_obstacle.jl  get_cbf_three_blocks.jl  get_cbf_unicycle_env.jl
src/DifferentiableOptimizationCBF/envs/: __init__.py  fr3_base_env.py  three_blocks_env.py  two_walls_env.py
src/DifferentiableOptimizationCBF/robots/: fr3_link3_capsule.urdf  fr3_link3_ellipsoid.urdf  fr3_link4_capsule.urdf  fr3_link5_2_capsule.urdf  fr3_link7_capsule.urdf  wall_back_lower.urdf  wall_front_lower.urdf
src/DifferentiableOptimizationCBF/toy_example/: cbf_qp.py  configs.py  julia_interop.py  performance_controller.py  qp_solver.py  unicycle_dynamics.py  unicycle_env.py  unicycle_exp.py  unicycle_plot_utils.py
