[project]
name = "DifferentiableOptimizationCBF"
version = "1.1.0"
description = "Simulation Code for Differentiable Optimizer Based CBF"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bolun Dai", email = "bd1555@nyu.edu" }]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  # Pinned to 0.6.2: later wheels (>=0.6.5) ship a broken macOS arm64 binary.
  # Their CI delocate step is missing — the .so links @rpath/libc++.1.dylib
  # against /Users/runner/miniconda3/... which doesn't exist on user machines.
  # 0.6.2 links against /usr/lib/libc++.1.dylib (absolute system path) and
  # works on macOS arm64 + Linux + Windows. Bump when upstream republishes.
  "proxsuite==0.6.2",
  "pin>=3.0",
  "pybullet>=3.2.5; sys_platform == 'linux'",
  "pybullet-mm>=3.2.7; sys_platform == 'darwin'",
  "juliacall>=0.9.20",
  "fr3env @ git+https://github.com/BolunDai0216/FR3Env.git",
]

[project.urls]
Homepage = "https://github.com/BolunDai0216/DifferentiableOptimizationCBF"
Documentation = "https://differentiableoptimizationcbf.readthedocs.io/"

[project.scripts]
diffoptcbf-three-blocks = "DifferentiableOptimizationCBF.three_blocks_exp:main"
diffoptcbf-two-walls = "DifferentiableOptimizationCBF.two_walls_exp:main"
diffoptcbf-unicycle = "DifferentiableOptimizationCBF.unicycle_exp:main"
diffoptcbf-unicycle-sysimage = "DifferentiableOptimizationCBF.unicycle_exp_sysimage:main"

[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "myst-parser",
  "nbsphinx",
  "sphinx_book_theme",
  "sphinx-autobuild",
  "sphinx-autoapi",
  "sphinxcontrib-youtube",
  "sphinx_design",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# pybullet has no macOS wheels and fails to build on macOS arm64.
# On Darwin we use the community fork pybullet-mm, which builds and
# registers itself as the `pybullet` import. Override FR3Env's transitive
# requirement so it's only enforced on Linux.
override-dependencies = ["pybullet ; sys_platform == 'linux'"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/DifferentiableOptimizationCBF"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
