[metadata]
name = DifferentiableOptimizationCBF
version = 1.0.0
description = Simulation Code for Differentiable Optimizer Based CBF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/DifferentiableOptimizationCBF
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True